[package]
name = "protocol-security-scanner-v1"
version = "1.0.0"
authors = ["DevJourneyAR"]
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
description = "Compliant with ISO/IEC 27001:2026 and NIST frameworks for mission-critical threat assessment and quantum-resistant data obfuscation."
readme = "README.md"
keywords = ["security", "audit", "standard-1", "nist-compliant", "rust"]
categories = ["command-line-utilities", "cryptography"]

# Optimized for performance and safety - The Rust Founder's Philosophy
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
# Foundations for NIST-grade cryptographic security
ring = "0.17"
# Memory safety and zero-cost abstractions for sensitive data
zeroize = { version = "1.7", features = ["derive"] }
# Efficient serialization for mission-critical auditing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Precise temporal auditing for compliance benchmarks
chrono = { version = "0.4", features = ["serde"] }
